# Trimesh

./: README.md
trimesh2/: CMakeLists.txt  main.cpp
trimesh2/bin.Linux64/: grid_subsamp  mesh_align  mesh_cat  mesh_cc  mesh_check  mesh_crunch  mesh_filter  mesh_hf  mesh_info  mesh_make  mesh_shade  mesh_view  xf
